[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Monster_2.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 31.366

[sub_resource type="CircleShape2D" id=3]
radius = 35.9287

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( -4.25179, -1.26416 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4.9696, 2.81673 )
scale = Vector2( 0.0303588, 0.0285624 )
frames = SubResource( 1 )

[node name="fPosition" type="Position2D" parent="."]
position = Vector2( 1.77979, 51.042 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2( 3.78905, 2.72718 )
shape = SubResource( 2 )

[node name="ActorDetector" type="Area2D" parent="."]
position = Vector2( 0.299194, 4.27086 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActorDetector"]
position = Vector2( 3.77551, -1.42008 )
shape = SubResource( 3 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ActorDetector" to="." method="_on_ActorDetector_body_entered"]
